# motrs

./: .gitignore  CMakeLists.txt  Makefile  Makefile_WIN32  README  make.bat  motrs  world-editor-plan
_notes/: Music List.doc  todo
_scrap/: meeting
animations/hero_run_north/: 0
animations/hero_stand_se/: properties.txt
animations/hero_stand_sw/: 0
animations/sonic_run_ne/: properties.txt
animations/sonic_run_north/: 0  properties.txt
animations/sonic_run_west/: properties.txt
animations/sonic_stand_nw/: properties.txt
characters/: hero.char.txt
cmake/: win32-toolchain.cmake
cmake/include/: os_config.h.in  version.h.in
cmake/modules/: FindSFML.cmake
resource/animations/: hero_run_east.ani  hero_run_ne.ani  hero_run_north.ani  hero_run_nw.ani  hero_run_se.ani  hero_run_south.ani  hero_run_sw.ani  hero_run_west.ani  hero_stand_east.ani  hero_stand_ne.ani  hero_stand_north.ani  hero_stand_nw.ani  hero_stand_se.ani  hero_stand_south.ani  hero_stand_sw.ani  hero_stand_west.ani  sonic_run_east.ani  sonic_run_ne.ani  sonic_run_north.ani  sonic_run_nw.ani  sonic_run_se.ani  sonic_run_south.ani  sonic_run_sw.ani  sonic_run_west.ani  sonic_stand_east.ani  sonic_stand_ne.ani  sonic_stand_north.ani  sonic_stand_nw.ani  sonic_stand_se.ani  sonic_stand_south.ani  sonic_stand_sw.ani  sonic_stand_west.ani
resource/characters/: hero.char  sonic.char
resource/maps/: crap.map  happy.map  tree test.map
resource/tiles/: Dirt 1.tile  Dirt 2.tile  Dirt 3.tile  Dirt 4.tile  Grass 1.tile  Grass 2.tile  Grass 3.tile  Invisible Wall.tile  Portal House 1.tile  Portal to long run.tile  Portal to tree test.tile  Rock.tile  Sand 1.tile  Sand 2.tile  Sand 3.tile  Sand 4.tile  blueshit.tile  crappy house (0, 0).tile  crappy house (0, 1).tile  crappy house (0, 2).tile  crappy house (1, 0).tile  crappy house (1, 1).tile  crappy house (1, 2).tile  crappy house (2, 0).tile  crappy house (2, 1).tile  crappy house (2, 2).tile  house (0, 0).tile  house (0, 1).tile  house (0, 2).tile  house (1, 0).tile  house (1, 1).tile  house (1, 2).tile  house (2, 0).tile  house (2, 1).tile  house (2, 2).tile  table (0, 0).tile  table (1, 0).tile  tree (0, 0).tile  tree (0, 1).tile  tree (0, 2).tile  (+6 more)
resources/: CMakeLists.txt
resources/animations/hero_run_east/: properties.txt
resources/characters/: hero.char  sonic.char  sonic.char.txt  sonic.character
resources/entities/: hero.entity  load_stone.entity  pebble.entity  rock.entity  sonic.entity
resources/maps/: ERROR.map  puzzle.map  skijumpLeft.map  skijumpRight.map  test2.map  tmp.map
resources/tiles/: Dirt 1.tile  Dirt 2.tile  Dirt 3.tile  Dirt 3.tile.txt  Dirt 4.tile  Grass 1.tile  Grass 1.tile.txt  Grass 2.tile  Grass 3.tile  Grass 3.tile.txt  Invisible Wall.tile  Invisible Wall.tile.txt  Portal House 1.tile  Portal to long run.tile  Portal to long run.tile.txt  Portal to tree test.tile  Rock.tile  Rock.tile.txt  Sand 1.tile  Sand 2.tile  Sand 3.tile  Sand 4.tile  Sand 4.tile.txt  blueshit.tile  blueshit.tile.txt  crappy house (0, 0).tile  crappy house (0, 0).tile.txt  crappy house (0, 1).tile  crappy house (0, 1).tile.txt  crappy house (0, 2).tile  crappy house (1, 0).tile  crappy house (1, 1).tile  crappy house (1, 2).tile  crappy house (2, 0).tile  crappy house (2, 0).tile.txt  crappy house (2, 1).tile  crappy house (2, 1).tile.txt  crappy house (2, 2).tile  house (0, 0).tile  house (0, 0).tile.txt  (+25 more)
resources/universes/: main.universe
resources/worlds/: skijump.world  tmp.world
src/: Animation.cpp  Animation.h  ArgumentParser.cpp  ArgumentParser.h  Array3.h  Character.cpp  Character.h  Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h  Debug.cpp  Debug.h  Entity.cpp  Entity.h  Gameplay.cpp  Gameplay.h  Graphic.cpp  Graphic.h  Image.h  Input.cpp  Input.h  MainWindow.cpp  MainWindow.h  Map.cpp  Map.h  Physics.cpp  Physics.h  PropertiesResource.cpp  PropertiesResource.h  ResourceFile.cpp  ResourceFile.h  ResourceManager.cpp  ResourceManager.h  Tile.cpp  Tile.h  Trigger.h  Universe.cpp  Universe.h  Utils.cpp  (+16 more)
src/data/: config.ini
tiles/: Dirt 1.tile.txt  Dirt 2.tile.txt  Dirt 4.tile.txt  Grass 2.tile.txt  Portal House 1.tile.txt  Portal to tree test.tile.txt  Sand 1.tile.txt  Sand 2.tile.txt  Sand 3.tile.txt  crappy house (0, 2).tile.txt  crappy house (1, 0).tile.txt  crappy house (1, 1).tile.txt  crappy house (1, 2).tile.txt  crappy house (2, 2).tile.txt  house (1, 0).tile.txt  house (1, 2).tile.txt  house (2, 0).tile.txt  house (2, 2).tile.txt  table (0, 0).tile.txt  table (1, 0).tile.txt  tree (0, 0).tile.txt  tree (0, 2).tile.txt  tree (1, 0).tile.txt  tree (1, 1).tile.txt  tree (1, 2).tile.txt  tree (2, 0).tile.txt  tree (2, 1).tile.txt
tools/: case-labels  compile-resources  compile_animations.pl  compile_file.pl  compile_props.pl  deploy  deploy_update  generate-file-index  input.config  sjsresource
tools/mapeditor/: Globals.bas  Hexadecimal.bas  MotrsEdit.vbp  MotrsEdit.vbw  QSortString.bas  Tile.cls  default_tile.tile.txt  frmBitmapSplicer.frm  frmChooseChar.frm  frmChooseTiles.frm  frmMain.frm  frmMain.frx  frmMapProperties.frm  frmTest.frm  frmTileEditor.frm  playtest.bat
tools/resource-edit/: main.cpp
tools/sjsresource_src/: main.c
tools/tilestudio/: Blitz3D (RGBA).tsd  BlitzMax (PNG).tsd  ts.tsc
tools/updater/: UpdaterDialog.cpp  UpdaterDialog.h  UpdaterDialog.ui  files.example  main.cpp
tools/world-editor/: EditorEntity.cpp  EditorEntity.h  EditorGlobals.h  EditorGraphic.cpp  EditorGraphic.h  EditorGraphicTimer.cpp  EditorGraphicTimer.h  EditorMap.cpp  EditorMap.h  EditorObject.cpp  EditorObject.h  EditorResourceManager.cpp  EditorResourceManager.h  EditorSettings.cpp  EditorSettings.h  EditorTile.cpp  EditorTile.h  EditorUniverse.cpp  EditorUniverse.h  EditorUtils.cpp  EditorUtils.h  EditorWorld.cpp  EditorWorld.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ObjectEditor.cpp  ObjectEditor.h  ObjectEditor.ui  ObjectView.cpp  ObjectView.h  PlaytestThread.cpp  PlaytestThread.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  WorldEditor.cpp  WorldEditor.h  WorldEditor.ui  WorldView.cpp  (+18 more)
(+20 files in other folders)
